working on cross search
